# multilanguage-blog

./: .env.example  .gitignore  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose-local.yaml  main.py  minio-policy.json  pyproject.toml  run.sh  setup.cfg
alembic/: env.py
alembic/versions/: 20260405_67d7fa8e6e2a_.py  20260410_11_16_22_21d2388d83ef_added_users_and_auth.py  20260410_11_17_12_080164b1aa7c_added_publications.py  20260410_17_26_42_8a776413a419_published_at_for_publications.py  20260411_12_39_16_0677a52c813c_configured_comments_limits.py  20260412_17_42_49_a82681a4e71f_added_likes_for_publications.py  20260518_12_00_00_b3f4c1d92e8a_added_comment_threads.py  20260519_12_00_00_c4e5d2a3b1f9_added_publication_tags.py  20260519_14_00_00_d7a8b3c1f254_publication_trgm_search.py  20260525_12_00_00_e9c4a1b7d6f3_add_user_language.py  20260525_13_00_00_f1a2b3c4d5e6_add_publication_image_position.py
apps/: routers.py
apps/auth/: exceptions.py  router.py
apps/auth/schemas/: requests.py
apps/auth/services/: command.py  query.py
apps/publications/: api.py  dependencies.py  models.py
apps/publications/api/: __init__.py  comments_api.py  dependencies.py  likes_api.py  publications_api.py  tags_api.py
apps/publications/schemas/: requests.py  (+1 more)
apps/users/: api.py  enums.py  exceptions.py  router.py
core/: base_service.py  config.py  database.py  dependencies.py  models.py  redis.py  security.py  storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: check-locales.mjs
frontend/src/: App.tsx
(+74 files in other folders)
